--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,26 +6,24 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <androidx.viewpager2.widget.ViewPager2
-        android:id="@+id/viewPager2"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
-        />
 
     <Button
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
-        android:id="@+id/buttonFront"
-        android:text="模拟向上加载数据"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginTop="50dp"
+        android:id="@+id/btn_kotlin_use"
+        android:text="Kotlin里中的使用"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
 
     <Button
-        app:layout_constraintTop_toBottomOf="@+id/buttonFront"
+        android:layout_marginTop="10dp"
+        app:layout_constraintTop_toBottomOf="@+id/btn_kotlin_use"
+        app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
-        android:id="@+id/buttonBack"
-        android:text="模拟向下加载数据"
+        android:id="@+id/btn_java_use"
+        android:text="Java中的使用"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
 
