--- a/app/src/main/res/layout/activity_kotuse.xml
+++ b/app/src/main/res/layout/activity_kotuse.xml
@@ -14,6 +14,7 @@
         />
 
     <Button
+        android:layout_marginTop="40dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         android:id="@+id/buttonFront"
