--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,18 +12,28 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         android:layout_marginTop="50dp"
-        android:id="@+id/btn_kotlin_use"
-        android:text="Kotlin里中的使用"
+        android:id="@+id/btn_base_use"
+        android:text="SmartViewPager2Adapter基本使用"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
 
     <Button
         android:layout_marginTop="10dp"
-        app:layout_constraintTop_toBottomOf="@+id/btn_kotlin_use"
+        app:layout_constraintTop_toBottomOf="@+id/btn_base_use"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
-        android:id="@+id/btn_java_use"
-        android:text="Java中的使用"
+        android:id="@+id/btn_gallery_use"
+        android:text="画廊的使用"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
+
+    <Button
+        android:layout_marginTop="10dp"
+        app:layout_constraintTop_toBottomOf="@+id/btn_gallery_use"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:id="@+id/btn_3d_use"
+        android:text="3dTransformer使用"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
 
