--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -98,4 +98,17 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btn_side" />
 
+    <androidx.appcompat.widget.AppCompatTextView
+        android:id="@+id/btn_remove_use"
+        style="@style/ButtonStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:text="remove的使用"
+        app:bl_pressed_solid_color="@color/color_indicator_80"
+        app:bl_unPressed_solid_color="@color/color_indicator"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btn_indicator_use" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
