--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -18,4 +18,10 @@
     <color name="color_indicator">#CF4FF3</color>
     <color name="color_indicator_80">#80CF4FF3</color>
 
+
+    <color name="background_home">#DA5353</color>
+    <color name="background_mine">#5370DA</color>
+    <color name="background_file">#4CAF50</color>
+    <color name="background_manager">#009688</color>
+
 </resources>
